--- a/Labo5/Oefeningen/Oef6.css
+++ b/Labo5/Oefeningen/Oef6.css
@@ -1,13 +1,14 @@
 h1
 {
     font-family: Arial;
-    font-size: 1.8em;
+    font-size: 2ex;
 
 }
 h2
 {
     font-family: Arial;
-    font-size: 1.5em;
+    /*font-size: 1.5em;*/
+    font-size: 2em;
 }
 h3
 {
